test/bad/arrays/empty02.px

for x in [] do
    skip
